--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -40,3 +40,15 @@ $border-color: $hr-color;
 $body-bg: #fff;
 $secondary-text-color: rgba(0, 0, 0, 0.54);
 $font-color: $body-color-light;
+
+// StackediTED Fever Dream Palette
+$fever-purple: #9D4EDD;
+$fever-purple-deep: #7B2CBF;
+$fever-teal: #2DD4BF;
+$fever-teal-dark: #14B8A6;
+$fever-coral: #FF6B6B;
+$fever-lime: #84CC16;
+$fever-ghost-white: #F0F0FF;
+$fever-ghost-dark: #1A1625;
+$fever-purple-alpha: rgba(157, 78, 221, 0.15);
+$fever-teal-alpha: rgba(45, 212, 191, 0.15);
